# EasyDrawer

./: .env.example  .gitignore  README.md  README_CN.md  SOUL.md  USER.md  pyproject.toml  run.py
data/prompts/: negative_base.json  quality_enhancers.json
docs/: DEVELOPMENT.md  QUICKSTART.md  SUMMARY.md
examples/: basic_usage.py  curl_examples.sh
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  start.bat  start.py  start.sh  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ApiKeySettings.tsx  GenerationForm.tsx  HistoryPanel.tsx  ImageGallery.tsx  ResultDetails.tsx  StatusBadge.tsx
frontend/src/services/: api.ts
frontend/src/styles/: index.css
frontend/src/types/: api.ts
src/: __init__.py  config.py
src/agent/: workflow.py
src/api/: main.py
src/models/: schemas.py
src/services/: flux_client.py  history.py  parameter_optimizer.py  prompt_optimizer.py  quality_scorer.py  sd_client.py
tests/: test_api_config.py  test_flux_client.py  test_parameter_optimizer.py  test_prompt_optimizer.py  test_schemas.py
